(Seemingly) fixed word wrapping in some components

--- a/src/components/TaskMultiPicker/TaskMultiPickerListItem.css
+++ b/src/components/TaskMultiPicker/TaskMultiPickerListItem.css
@@ -8,4 +8,5 @@
 .task-multi-picker-list-item-name {
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
